Add update/delete user methods
