# src/swagger/annotations/schemas.json
@@ -87,6 +87,26 @@
 			}
 		}
 	},
+	"UserUpdate": {
+		"type": "object",
+		"properties": {
+			"name": {
+				"type": "string",
+				"format": "name"
+			},
+			"email": {
+				"type": "string",
+				"format": "email"
+			},
+			"password": {
+				"type": "string",
+				"format": "password"
+			},
+			"role": {
+				"$ref": "#/Role"
+			}
+		}
+	},
 	"ProductCreate": {
 		"type": "object",
 		"required": [
